# qsl-desktop

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DECISIONS.md  NOTICE  README.md  SECURITY.md
.github/workflows/: ci.yml
docs/: DESIGN_SPEC.md  DESIGN_SPEC_AppendixD.md  DESIGN_SPEC_AppendixE.md  DESIGN_SPEC_AppendixF.md
src/: main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  gateway.rs  lib.rs  main.rs  markers.rs  paths.rs  settings.rs  state.rs
src-tauri/tests/: design_round2.rs  design_round3.rs  design_system.rs  server_pane.rs  slice_a_flows.rs  slice_a_rules.rs
ui/: index.html  main.js  style.css
