[package]
name = "qsl-desktop-app"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-only"
description = "QSL desktop client — slice A: serverless skeleton (vault/identity/unlock lifecycle)"

[lib]
name = "qsl_desktop_app"
path = "src/lib.rs"

[[bin]]
name = "qsl-desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
qsc = { git = "https://github.com/QuantumShieldLabs/qsl-protocol", rev = "81143dcd3b4a7beead7d0f4e742717a4310e2409" }

[dev-dependencies]
tempfile = "3"
